--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <body>
     <div class="wrapper">
-      <h1>Zetsy</h1>
+      <h1>
+        <a href="#">Zetsy</a>
+      </h1>
     </div>
   </body>
 </html>
