--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <body>
     <div class="wrapper">
       <header>
-      <h1>
-        <a href="#">Zetsy</a>
-      </h1>
+        <h1>
+          <a href="#">Zetsy</a>
+        </h1>
+      </header>
     </div>
   </body>
 </html>
