--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="#">Zetsy</a>
         </h1>
       </header>
-      <img src="/images/necklace.jpg"
+        <img src="/images/necklace.jpg">
     </div>
   </body>
 </html>
