--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
           <a href="#">Zetsy</a>
         </h1>
       </header>
+      <section id="featured">
         <img src="/images/necklace.jpg">
+      </section>
     </div>
   </body>
 </html>
