automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </header>
       <section id="featured">
         <img src="/images/necklace.jpg">
+        <h2>About</h2>
       </section>
     </div>
   </body>
