--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <section id="featured">
         <img src="/images/necklace.jpg">
         <h2>About</h2>
+        <p>Mary Wanesia is a jeweler, an Arizona native, and a member of the Navajo tribe.
+          She specializes in creating beautiful, contemporary takes on the traditional adornments worn by the Navajo in ceremonies and in daily life.</p>
       </section>
     </div>
   </body>
