automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <p>Mary's jewelry has received recognition and has been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly.
       </section>
       <section id="press">
+        <h2>Press</h2>
     </div>
   </body>
 </html>
