automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </section>
       <section id="press">
         <h2>Press</h2>
+        <a href="http://nmai.si.edu.home/" target="_blank">
     </div>
   </body>
 </html>
