--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section id="press">
         <h2>Press</h2>
         <a href="http://nmai.si.edu.home/" target="_blank">
+          <img src="/images/nmai-logo.png"
     </div>
   </body>
 </html>
