automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <a href="http://nmai.si.edu.home/" target="_blank">
           <img src="/images/nmai-logo.png">
         </a>
+        <a href="http://nmai.si.edu.home/" target="_blank">
+          <img src="/images/nmai-logo.png">
+        </a>
+        <a href="http://nmai.si.edu.home/" target="_blank">
+          <img src="/images/nmai-logo.png">
+        </a>
+        <a href="http://nmai.si.edu.home/" target="_blank">
+          <img src="/images/nmai-logo.png">
+        </a>
     </div>
   </body>
 </html>
