--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="/images/nmai-logo.png">
         </a>
         <a href="http://nmai.si.edu.home/" target="_blank">
-          <img src="/images/nmai-logo.png">
+          <img src="/images/times-logo.png">
         </a>
         <a href="http://nmai.si.edu.home/" target="_blank">
           <img src="/images/nmai-logo.png">
