automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img src="/images/times-logo.png">
         </a>
         <a href="http://nmai.si.edu.home/" target="_blank">
-          <img src="/images/nmai-logo.png">
+          <img src="/images/sedona-logo.png">
         </a>
         <a href="http://nmai.si.edu.home/" target="_blank">
           <img src="/images/nmai-logo.png">
