--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="/images/sedona-logo.png">
         </a>
         <a href="http://nmai.si.edu.home/" target="_blank">
-          <img src="/images/nmai-logo.png">
+          <img src="/images/bergdorf-logo.png">
         </a>
     </div>
   </body>
