--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a href="http://nmai.si.edu.home/" target="_blank">
           <img src="/images/bergdorf-logo.png">
         </a>
+      </section>
     </div>
   </body>
 </html>
