automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <img src="/images/bergdorf-logo.png">
         </a>
       </section>
+      <footer>
+        <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
